@@ -1,3 +1,8 @@
+2006-05-12 Paul Jakma <paul.jakma@sun.com>
+
+	* plist.c: (vty_prefix_list_uninstall) Fix potential NULL deref
+	  of prefix and typestr strings, Coverity CID #3.
+
 2006-03-30 Paul Jakma <paul.jakma@sun.com>
 
 	* command.h: (DEFUN_CMD_FUNC_TEXT) Annotate arguments as
